tests/syntax_error/c_or.jou
def foo() -> void:
    if x || y:  # Error: use 'or' instead of '||'
        pass
